--- a/nicepage.css
+++ b/nicepage.css
@@ -46079,8 +46079,8 @@ a.u-link.u-text-hover-color-var:hover {
 }
 
 .u-header .u-image-1 {
-  width: 253px;
-  height: 64px;
+  width: 353px;
+  height: 91px;
   margin: 22px auto 0 0;
 }
 
@@ -46094,10 +46094,10 @@ a.u-link.u-text-hover-color-var:hover {
 }
 
 .u-header .u-nav-1 {
-  font-size: 1rem;
-  letter-spacing: 0px;
   font-weight: 700;
+  font-size: 1rem;
   text-transform: uppercase;
+  letter-spacing: normal;
 }
 
 .u-header .u-nav-2 {
@@ -46105,7 +46105,7 @@ a.u-link.u-text-hover-color-var:hover {
 }
 @media (max-width: 1199px) {
   .u-header .u-image-1 {
-    width: 253px;
+    width: 353px;
   }
 
   .u-header .u-menu-1 {
