--- a/index.css
+++ b/index.css
@@ -27,11 +27,11 @@
 .u-section-1 .u-image-2 {
   height: 698px;
   width: 870px;
-  --animation-custom_in-translate_x: 300px;
+  --animation-custom_in-translate_x: 0px;
   --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
+  --animation-custom_in-scale: 0.3;
   margin: -155px calc(((100% - 1140px) / 2)  + 30px) 0 auto;
 }
 
@@ -40,10 +40,10 @@
   min-height: 695px;
   height: auto;
   --animation-custom_in-translate_x: 0px;
-  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
+  --animation-custom_in-scale: 0.3;
   margin: -342px auto 47px calc(((100% - 1140px) / 2));
 }
 
@@ -53,10 +53,12 @@
 
 .u-section-1 .u-text-2 {
   font-size: 2.25rem;
+  font-weight: 700;
   margin: 0;
 }
 
 .u-section-1 .u-text-3 {
+  font-size: 1.5rem;
   margin: 33px 0 0;
 }
 
@@ -80,6 +82,7 @@
     width: 845px;
     margin-top: -306px;
     margin-right: calc(((100% - 940px) / 2));
+    animation-duration: 3000ms;
   }
 
   .u-section-1 .u-group-2 {
@@ -91,18 +94,19 @@
 
 @media (max-width: 991px) {
    .u-section-1 {
-    min-height: 1145px;
+    min-height: 1336px;
   }
 
   .u-section-1 .u-image-2 {
     height: 516px;
     width: 646px;
-    margin-top: -274px;
+    margin-top: -170px;
     margin-right: calc(((100% - 720px) / 2));
   }
 
   .u-section-1 .u-group-2 {
-    margin-top: -113px;
+    margin-top: -89px;
+    margin-bottom: 60px;
     margin-left: calc(((100% - 720px) / 2));
   }
 }
@@ -137,40 +141,49 @@
 
 @media (max-width: 575px) {
    .u-section-1 {
-    min-height: 1371px;
+    min-height: 1003px;
+  }
+
+  .u-section-1 .u-image-1 {
+    margin-top: 47px;
+    min-height: 191px;
   }
 
   .u-section-1 .u-image-2 {
-    height: 252px;
-    width: 316px;
-    margin-top: -32px;
-    margin-right: calc(((100% - 340px) / 2));
+    height: 222px;
+    width: 304px;
+    margin-top: -78px;
+    margin-right: calc(((100% - 340px) / 2)  + 12px);
   }
 
   .u-section-1 .u-group-2 {
-    width: 291px;
-    min-height: 1004px;
-    margin-top: -33px;
-    margin-left: calc(((100% - 340px) / 2));
+    width: 340px;
+    min-height: 639px;
+    margin-top: -56px;
+    margin-left: auto;
+    margin-bottom: 38px;
   }
 
   .u-section-1 .u-container-layout-2 {
-    padding-left: 0;
-    padding-right: 0;
+    padding: 1px 0 0;
   }
 
   .u-section-1 .u-text-2 {
+    margin-top: 21px;
     margin-left: 20px;
     margin-right: 20px;
+    font-size: 1.5rem;
   }
 
   .u-section-1 .u-text-3 {
+    font-size: 1.25rem;
     margin-left: 20px;
   }
 
   .u-section-1 .u-btn-1 {
+    font-size: 0.75rem;
     font-weight: 700;
-    margin-right: -60px;
+    margin-top: 20px;
     margin-left: auto;
     padding: 17px 4px 19px 2px;
   }
@@ -196,13 +209,12 @@
 .u-section-2 .u-text-2 {
   font-size: 1.875rem;
   font-weight: 700;
-  margin: 74px 443px 0 0;
-}
-
-.u-section-2 .u-image-1 {
-  width: 597px;
-  left: auto;
-  right: -82px;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  margin: 73px 0 0;
 }
 
 .u-section-2 .u-btn-1 {
@@ -211,7 +223,7 @@
   letter-spacing: 4px;
   background-image: none;
   font-weight: 700;
-  margin: 79px auto 60px 0;
+  margin: 80px auto 60px 0;
   padding: 18px 52px 18px 51px;
 }
 
@@ -221,37 +233,84 @@
   }
 
   .u-section-2 .u-text-1 {
-    margin-top: 60px;
+    margin-left: 100px;
   }
 
   .u-section-2 .u-text-2 {
-    margin-right: 243px;
+    margin-left: 100px;
+  }
+
+  .u-section-2 .u-btn-1 {
+    margin-left: 100px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 429px;
+    min-height: 757px;
+  }
+
+  .u-section-2 .u-text-1 {
+    width: auto;
+    margin-top: 80px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-2 .u-text-2 {
-    margin-right: 23px;
+    margin-top: 72px;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-btn-1 {
+    font-size: 1.5rem;
+    margin-top: 72px;
+    margin-left: auto;
+    padding: 39px 199px 41px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 322px;
+    min-height: 568px;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-left: 300px;
   }
 
   .u-section-2 .u-text-2 {
-    margin-right: 0;
+    margin-left: 300px;
+  }
+
+  .u-section-2 .u-btn-1 {
+    margin-left: 300px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 203px;
+    min-height: 522px;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-top: 25px;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-text-2 {
+    font-size: 1.5rem;
+    line-height: 1;
+    width: auto;
+    margin-top: 25px;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-btn-1 {
+    font-size: 1.25rem;
+    margin-top: 25px;
+    margin-left: auto;
+    padding: 18px 10px 18px 9px;
   }
 } .u-section-3 {
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('images/pexels-life-of-pix-7613.jpg');
@@ -259,30 +318,40 @@
 }
 
 .u-section-3 .u-sheet-1 {
-  min-height: 916px;
+  min-height: 969px;
 }
 
 .u-section-3 .u-text-1 {
   font-weight: 700;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
   margin: 82px auto 0 0;
 }
 
 .u-section-3 .u-text-2 {
   font-size: 2.25rem;
-  margin: 53px 19px 0 0;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  margin: 54px 19px 0 0;
 }
 
 .u-section-3 .u-btn-1 {
   font-weight: 700;
   font-size: 1.875rem;
   background-image: none;
-  margin: 43px 0 53px;
-  padding: 38px 178px 39px 176px;
+  margin: 36px 0 54px;
+  padding: 38px 177px 39px;
 }
 
 @media (max-width: 1199px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 755px;
+    min-height: 799px;
   }
 
   .u-section-3 .u-text-1 {
@@ -296,19 +365,43 @@
 
 @media (max-width: 991px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 578px;
+    min-height: 984px;
+  }
+
+  .u-section-3 .u-btn-1 {
+    font-size: 1.5rem;
+    margin-top: 42px;
+    margin-bottom: 60px;
+    padding-right: 47px;
+    padding-left: 45px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 434px;
+    min-height: 738px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 273px;
+    min-height: 682px;
+  }
+
+  .u-section-3 .u-text-1 {
+    width: auto;
+    margin-top: 42px;
+  }
+
+  .u-section-3 .u-text-2 {
+    font-size: 1.125rem;
+    width: auto;
+    margin-top: 41px;
+  }
+
+  .u-section-3 .u-btn-1 {
+    margin: 41px auto 42px;
+    padding: 25px 7px 27px 6px;
   }
 }.u-section-4 .u-sheet-1 {
   min-height: 749px;
@@ -378,35 +471,44 @@
 
 @media (max-width: 991px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 601px;
+    min-height: 665px;
   }
 
   .u-section-4 .u-layout-wrap-1 {
-    margin-bottom: 60px;
+    margin-top: 28px;
+    margin-bottom: 46px;
     margin-left: initial;
   }
 
   .u-section-4 .u-image-1 {
-    min-height: 398px;
+    min-height: 581px;
   }
 
   .u-section-4 .u-layout-cell-2 {
-    min-height: 100px;
+    min-height: 581px;
   }
 
   .u-section-4 .u-container-layout-2 {
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .u-section-4 .u-text-1 {
+    margin-top: 41px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 921px;
+    min-height: 985px;
   }
 
   .u-section-4 .u-image-1 {
-    min-height: 618px;
+    min-height: 902px;
+  }
+
+  .u-section-4 .u-layout-cell-2 {
+    min-height: 100px;
   }
 
   .u-section-4 .u-container-layout-2 {
@@ -437,10 +539,6 @@
     min-height: 600px;
   }
 
-  .u-section-4 .u-container-layout-2 {
-    padding-top: 0;
-  }
-
   .u-section-4 .u-text-1 {
     width: auto;
     margin-top: 31px;
@@ -451,6 +549,7 @@
   }
 } .u-section-5 {
   background-image: url("images/TECHNOLOGY-BACKGROUND.jpg");
+  background-position: 50% 50%;
 }
 
 .u-section-5 .u-sheet-1 {
@@ -512,6 +611,7 @@
 
 .u-section-5 .u-text-2 {
   font-style: italic;
+  font-size: 1.125rem;
   margin: 0;
 }
 
@@ -530,6 +630,7 @@
 
 .u-section-5 .u-text-3 {
   font-style: italic;
+  font-size: 1.125rem;
   margin: 0;
 }
 
@@ -548,6 +649,7 @@
 
 .u-section-5 .u-text-4 {
   font-style: italic;
+  font-size: 1.125rem;
   margin: 0;
 }
 
@@ -595,31 +697,64 @@
 
 @media (max-width: 991px) {
    .u-section-5 {
-    min-height: 1089px;
+    min-height: 279px;
   }
 
   .u-section-5 .u-sheet-1 {
-    min-height: 1089px;
+    min-height: 1272px;
   }
 
   .u-section-5 .u-layout-wrap-1 {
-    width: 720px;
+    margin-top: 37px;
+    margin-bottom: 50px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-5 .u-layout-cell-1 {
-    min-height: 100px;
+    min-height: 1185px;
+  }
+
+  .u-section-5 .u-container-layout-1 {
+    padding-top: 0;
+    padding-bottom: 0;
   }
 
   .u-section-5 .u-text-1 {
-    margin-top: 28px;
+    width: auto;
+  }
+
+  .u-section-5 .u-list-1 {
+    margin-top: 26px;
   }
 
   .u-section-5 .u-repeater-1 {
-    min-height: 435px;
+    min-height: 956px;
+  }
+
+  .u-section-5 .u-text-2 {
+    font-size: 1rem;
+    width: auto;
+    margin-top: -10px;
+  }
+
+  .u-section-5 .u-text-3 {
+    font-size: 1rem;
+    width: auto;
+    margin-top: -10px;
+  }
+
+  .u-section-5 .u-text-4 {
+    font-size: 1rem;
+    width: auto;
+    margin-top: -10px;
   }
 
   .u-section-5 .u-image-1 {
-    min-height: 1149px;
+    background-position: 48.68% 3.18%;
+    min-height: 1185px;
+    background-size: cover;
   }
 }
 
@@ -632,17 +767,13 @@
     min-height: 902px;
   }
 
-  .u-section-5 .u-layout-wrap-1 {
-    width: 540px;
+  .u-section-5 .u-layout-cell-1 {
+    min-height: 100px;
   }
 
   .u-section-5 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
-  }
-
-  .u-section-5 .u-text-1 {
-    margin-top: 0;
   }
 
   .u-section-5 .u-container-layout-2 {
@@ -671,8 +802,22 @@
     min-height: 583px;
   }
 
-  .u-section-5 .u-layout-wrap-1 {
-    width: 340px;
+  .u-section-5 .u-text-2 {
+    margin-top: -20px;
+    margin-right: -5px;
+    margin-left: 5px;
+  }
+
+  .u-section-5 .u-text-3 {
+    margin-top: -20px;
+    margin-right: -5px;
+    margin-left: 5px;
+  }
+
+  .u-section-5 .u-text-4 {
+    margin-top: -20px;
+    margin-right: -5px;
+    margin-left: 5px;
   }
 
   .u-section-5 .u-image-1 {
@@ -717,10 +862,10 @@
   background-image: linear-gradient(0deg, rgba(71,138,201,0.8), rgba(71,138,201,0.8)), url("images/dftg.jpg");
   background-position: 50% 50%;
   --animation-custom_in-translate_x: 0px;
-  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
+  --animation-custom_in-scale: 0.3;
 }
 
 .u-section-6 .u-container-layout-1 {
@@ -750,10 +895,10 @@
   background-image: linear-gradient(0deg, rgba(71,138,201,0.8), rgba(71,138,201,0.8)), url("images/cropped-view-professional-serious-finance-manager-holding-calculator-hands-checking-company-month-s-profits_176420-7931.jpg");
   background-position: 50% 50%;
   --animation-custom_in-translate_x: 0px;
-  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
+  --animation-custom_in-scale: 0.3;
 }
 
 .u-section-6 .u-container-layout-2 {
@@ -784,10 +929,10 @@
   background-image: linear-gradient(0deg, rgba(71,138,201,0.8), rgba(71,138,201,0.8)), url("images/derr-min.jpg");
   background-position: 100% 50%;
   --animation-custom_in-translate_x: 0px;
-  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
+  --animation-custom_in-scale: 0.3;
 }
 
 .u-section-6 .u-container-layout-3 {
@@ -818,10 +963,10 @@
   background-image: linear-gradient(0deg, rgba(71,138,201,0.8), rgba(71,138,201,0.8)), url("images/handshake-close-up-executives_1098-1384.jpg");
   background-position: 50% 50%;
   --animation-custom_in-translate_x: 0px;
-  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
+  --animation-custom_in-scale: 0.3;
 }
 
 .u-section-6 .u-container-layout-4 {
@@ -851,10 +996,10 @@
   background-image: linear-gradient(0deg, rgba(71, 138, 201, 0.8), rgba(71, 138, 201, 0.8)), url('images/pexels-pixabay-273209.jpg');
   background-position: 50% 50%;
   --animation-custom_in-translate_x: 0px;
-  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
+  --animation-custom_in-scale: 0.3;
 }
 
 .u-section-6 .u-container-layout-5 {
@@ -884,10 +1029,10 @@
   background-image: linear-gradient(0deg, rgba(71,138,201,0.8), rgba(71,138,201,0.8)), url("images/handshake-close-up-executives_1098-1384.jpg");
   background-position: 50% 50%;
   --animation-custom_in-translate_x: 0px;
-  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
+  --animation-custom_in-scale: 0.3;
 }
 
 .u-section-6 .u-container-layout-6 {
@@ -917,10 +1062,10 @@
   background-image: linear-gradient(0deg, rgba(71, 138, 201, 0.8), rgba(71, 138, 201, 0.8)), url('images/pexels-divinetechygirl-1181355.jpg');
   background-position: 50% 50%;
   --animation-custom_in-translate_x: 0px;
-  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
+  --animation-custom_in-scale: 0.3;
 }
 
 .u-section-6 .u-container-layout-7 {
@@ -950,10 +1095,10 @@
   background-image: linear-gradient(0deg, rgba(71, 138, 201, 0.8), rgba(71, 138, 201, 0.8)), url('images/pexels-pixabay-356065.jpg');
   background-position: 50% 50%;
   --animation-custom_in-translate_x: 0px;
-  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
+  --animation-custom_in-scale: 0.3;
 }
 
 .u-section-6 .u-container-layout-8 {
@@ -1089,25 +1234,25 @@
 
 @media (max-width: 991px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 1198px;
+    min-height: 2445px;
   }
 
   .u-section-6 .u-list-1 {
-    width: 720px;
+    margin-top: 20px;
+    margin-bottom: 50px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-6 .u-repeater-1 {
     grid-template-columns: repeat(2, calc(50% - 5px));
     grid-auto-columns: calc(50% - 5px);
-    min-height: 3260px;
+    min-height: 2176px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-6 .u-list-1 {
-    width: 540px;
-  }
-
   .u-section-6 .u-repeater-1 {
     grid-template-columns: 100%;
     grid-auto-columns: calc(100% - 0px);
@@ -1115,10 +1260,6 @@
 }
 
 @media (max-width: 575px) {
-  .u-section-6 .u-list-1 {
-    width: 340px;
-  }
-
   .u-section-6 .u-repeater-1 {
     grid-auto-columns: 100%;
   }
@@ -1373,16 +1514,17 @@
 
 @media (max-width: 991px) {
    .u-section-7 {
-    min-height: 832px;
+    min-height: 833px;
   }
 
   .u-section-7 .u-text-1 {
+    margin-top: -363px;
     margin-left: auto;
   }
 
   .u-section-7 .u-list-1 {
     width: 651px;
-    margin-top: 13px;
+    margin-top: 34px;
     margin-right: auto;
     margin-left: calc(((100% - 720px) / 2));
   }
@@ -1677,10 +1819,21 @@
   text-transform: uppercase;
   font-size: 6rem;
   font-weight: 700;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
   margin: 66px 0 0;
 }
 
 .u-section-8 .u-text-2 {
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  font-size: 1.5rem;
   margin: 18px 291px 0 0;
 }
 
@@ -1710,17 +1863,23 @@
 
 @media (max-width: 991px) {
   .u-section-8 .u-sheet-1 {
-    min-height: 483px;
+    min-height: 778px;
   }
 
   .u-section-8 .u-text-2 {
     margin-right: 0;
   }
+
+  .u-section-8 .u-btn-1 {
+    margin-top: 39px;
+    margin-bottom: 59px;
+    padding: 28px 62px 28px 61px;
+  }
 }
 
 @media (max-width: 767px) {
   .u-section-8 .u-sheet-1 {
-    min-height: 362px;
+    min-height: 584px;
   }
 
   .u-section-8 .u-text-1 {
@@ -1730,10 +1889,19 @@
 
 @media (max-width: 575px) {
   .u-section-8 .u-sheet-1 {
-    min-height: 228px;
+    min-height: 902px;
   }
 
   .u-section-8 .u-text-1 {
-    font-size: 3rem;
+    font-size: 2.25rem;
+  }
+
+  .u-section-8 .u-text-2 {
+    font-size: 1.25rem;
+  }
+
+  .u-section-8 .u-btn-1 {
+    padding-right: 11px;
+    padding-left: 9px;
   }
 }
