--- a/nicepage.css
+++ b/nicepage.css
@@ -46114,7 +46114,17 @@ a.u-link.u-text-hover-color-var:hover {
 }
 
 
+@media (max-width: 575px) {
+  .u-header .u-sheet-1 {
+    min-height: 135px;
+  }
 
+  .u-header .u-image-1 {
+    width: 252px;
+    height: 65px;
+    margin-top: 48px;
+  }
+}
  .u-footer {
   background-image: none;
 }
@@ -46125,28 +46135,29 @@ a.u-link.u-text-hover-color-var:hover {
 
 .u-footer .u-text-1 {
   width: 417px;
-  margin: 49px auto;
+  margin: 49px auto 0;
 }
-@media (max-width: 1199px) {
-  .u-footer .u-sheet-1 {
-    min-height: 99px;
-  }
-}
-@media (max-width: 991px) {
-  .u-footer .u-sheet-1 {
-    min-height: 76px;
-  }
-}
-@media (max-width: 767px) {
-  .u-footer .u-sheet-1 {
-    min-height: 57px;
-  }
-}
-@media (max-width: 575px) {
-  .u-footer .u-sheet-1 {
-    min-height: 36px;
-  }
 
+.u-footer .u-social-icons-1 {
+  height: 32px;
+  width: 64px;
+  min-height: 16px;
+  margin: 30px auto 60px;
+}
+
+.u-footer .u-icon-1 {
+  height: 100%;
+  color: rgb(0, 230, 118) !important;
+}
+
+.u-footer .u-icon-2 {
+  color: rgb(197, 54, 164) !important;
+  height: 100%;
+}
+
+
+
+@media (max-width: 575px) {
   .u-footer .u-text-1 {
     width: 340px;
   }
