--- a/index.css
+++ b/index.css
@@ -193,7 +193,7 @@
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 679px;
+  min-height: 1354px;
 }
 
 .u-section-2 .u-text-1 {
@@ -223,13 +223,89 @@
   letter-spacing: 4px;
   background-image: none;
   font-weight: 700;
-  margin: 80px auto 60px 0;
+  margin: 37px auto 0 0;
   padding: 18px 52px 18px 51px;
+}
+
+.u-section-2 .u-gallery-1 {
+  height: 750px;
+  margin-top: 37px;
+  margin-bottom: 27px;
+}
+
+.u-section-2 .u-gallery-inner-1 {
+  --gap: 0px;
+}
+
+.u-section-2 .u-carousel-item-1 {
+  margin-right: 0;
+}
+
+.u-section-2 .u-over-slide-1 {
+  min-height: 100px;
+  padding: 10px;
+}
+
+.u-section-2 .u-carousel-item-2 {
+  margin-right: 0;
+}
+
+.u-section-2 .u-over-slide-2 {
+  min-height: 100px;
+  padding: 10px;
+}
+
+.u-section-2 .u-carousel-item-3 {
+  margin-right: 0;
+}
+
+.u-section-2 .u-over-slide-3 {
+  min-height: 100px;
+  padding: 10px;
+}
+
+.u-section-2 .u-carousel-thumbnails-1 {
+  padding-top: 10px;
+}
+
+.u-section-2 .u-carousel-thumbnail-1 {
+  width: 100px;
+  height: 100px;
+}
+
+.u-section-2 .u-carousel-thumbnail-2 {
+  width: 100px;
+  height: 100px;
+}
+
+.u-section-2 .u-carousel-thumbnail-3 {
+  width: 100px;
+  height: 100px;
+}
+
+.u-section-2 .u-carousel-control-1 {
+  position: absolute;
+  left: 10px;
+  width: 40px;
+  height: 40px;
+  top: 242px;
+  right: auto;
+  padding: 4px;
+}
+
+.u-section-2 .u-carousel-control-2 {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  top: 242px;
+  left: auto;
+  right: 10px;
+  padding: 4px;
 }
 
 @media (max-width: 1199px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 560px;
+    min-height: 1116px;
   }
 
   .u-section-2 .u-text-1 {
@@ -243,11 +319,19 @@
   .u-section-2 .u-btn-1 {
     margin-left: 100px;
   }
+
+  .u-section-2 .u-carousel-control-1 {
+    left: 8px;
+  }
+
+  .u-section-2 .u-carousel-control-2 {
+    right: 8px;
+  }
 }
 
 @media (max-width: 991px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 757px;
+    min-height: 1269px;
   }
 
   .u-section-2 .u-text-1 {
@@ -268,11 +352,24 @@
     margin-left: auto;
     padding: 39px 199px 41px;
   }
+
+  .u-section-2 .u-gallery-1 {
+    height: 517px;
+    margin-bottom: 29px;
+  }
+
+  .u-section-2 .u-carousel-control-1 {
+    left: 6px;
+  }
+
+  .u-section-2 .u-carousel-control-2 {
+    right: 6px;
+  }
 }
 
 @media (max-width: 767px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 568px;
+    min-height: 952px;
   }
 
   .u-section-2 .u-text-1 {
@@ -286,11 +383,19 @@
   .u-section-2 .u-btn-1 {
     margin-left: 300px;
   }
+
+  .u-section-2 .u-carousel-control-1 {
+    left: 5px;
+  }
+
+  .u-section-2 .u-carousel-control-2 {
+    right: 5px;
+  }
 }
 
 @media (max-width: 575px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 522px;
+    min-height: 832px;
   }
 
   .u-section-2 .u-text-1 {
@@ -311,6 +416,19 @@
     margin-top: 25px;
     margin-left: auto;
     padding: 18px 10px 18px 9px;
+  }
+
+  .u-section-2 .u-gallery-1 {
+    height: 300px;
+    margin-bottom: 37px;
+  }
+
+  .u-section-2 .u-carousel-control-1 {
+    left: 3px;
+  }
+
+  .u-section-2 .u-carousel-control-2 {
+    right: 3px;
   }
 } .u-section-3 {
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('images/pexels-life-of-pix-7613.jpg');
