--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 0.3;
-  margin: 49px 0 0;
+  margin: 64px 0 0;
 }
 
 .u-section-1 .u-image-2 {
@@ -141,27 +141,32 @@
 
 @media (max-width: 575px) {
    .u-section-1 {
-    min-height: 1003px;
+    min-height: 924px;
   }
 
   .u-section-1 .u-image-1 {
-    margin-top: 47px;
+    margin-top: 4px;
     min-height: 191px;
+  }
+
+  .u-section-1 .u-text-1 {
+    width: auto;
+    margin-top: 33px;
   }
 
   .u-section-1 .u-image-2 {
     height: 222px;
     width: 304px;
-    margin-top: -78px;
-    margin-right: calc(((100% - 340px) / 2)  + 12px);
+    margin-top: -107px;
+    margin-right: auto;
   }
 
   .u-section-1 .u-group-2 {
     width: 340px;
-    min-height: 639px;
-    margin-top: -56px;
+    min-height: 608px;
+    margin-top: -27px;
     margin-left: auto;
-    margin-bottom: 38px;
+    margin-bottom: 33px;
   }
 
   .u-section-1 .u-container-layout-2 {
@@ -169,10 +174,10 @@
   }
 
   .u-section-1 .u-text-2 {
+    font-size: 1.5rem;
     margin-top: 21px;
     margin-left: 20px;
     margin-right: 20px;
-    font-size: 1.5rem;
   }
 
   .u-section-1 .u-text-3 {
@@ -436,7 +441,7 @@
 }
 
 .u-section-3 .u-sheet-1 {
-  min-height: 969px;
+  min-height: 1011px;
 }
 
 .u-section-3 .u-text-1 {
@@ -463,13 +468,13 @@
   font-weight: 700;
   font-size: 1.875rem;
   background-image: none;
-  margin: 36px 0 54px;
+  margin: 35px auto 55px;
   padding: 38px 177px 39px;
 }
 
 @media (max-width: 1199px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 799px;
+    min-height: 834px;
   }
 
   .u-section-3 .u-text-1 {
@@ -518,7 +523,8 @@
   }
 
   .u-section-3 .u-btn-1 {
-    margin: 41px auto 42px;
+    margin-top: 41px;
+    margin-bottom: 42px;
     padding: 25px 7px 27px 6px;
   }
 }.u-section-4 .u-sheet-1 {
@@ -918,6 +924,14 @@
 
   .u-section-5 .u-sheet-1 {
     min-height: 583px;
+  }
+
+  .u-section-5 .u-layout-cell-1 {
+    min-height: 876px;
+  }
+
+  .u-section-5 .u-repeater-1 {
+    min-height: 784px;
   }
 
   .u-section-5 .u-text-2 {
