--- a/nicepage.css
+++ b/nicepage.css
@@ -46070,12 +46070,8 @@ a.u-link.u-text-hover-color-var:hover {
 
 
 /*end-variables sitestylecss*/
- .u-header {
-  background-image: none;
-}
-
 .u-header .u-sheet-1 {
-  min-height: 80px;
+  min-height: 166px;
 }
 
 .u-header .u-image-1 {
@@ -46090,7 +46086,7 @@ a.u-link.u-text-hover-color-var:hover {
 }
 
 .u-header .u-menu-1 {
-  margin: -32px 0 22px auto;
+  margin: -32px 0 0 auto;
 }
 
 .u-header .u-nav-1 {
@@ -46103,6 +46099,12 @@ a.u-link.u-text-hover-color-var:hover {
 .u-header .u-nav-2 {
   font-size: 1.25rem;
 }
+
+.u-header .u-image-2 {
+  width: 200px;
+  height: 92px;
+  margin: -82px 71px 37px auto;
+}
 @media (max-width: 1199px) {
   .u-header .u-image-1 {
     width: 353px;
@@ -46111,18 +46113,31 @@ a.u-link.u-text-hover-color-var:hover {
   .u-header .u-menu-1 {
     width: auto;
   }
+
+  .u-header .u-image-2 {
+    margin-top: -82px;
+    margin-right: 71px;
+  }
 }
 
 
 @media (max-width: 575px) {
   .u-header .u-sheet-1 {
-    min-height: 135px;
+    min-height: 86px;
   }
 
   .u-header .u-image-1 {
-    width: 252px;
-    height: 65px;
-    margin-top: 48px;
+    width: 175px;
+    height: 45px;
+    margin-top: 21px;
+  }
+
+  .u-header .u-image-2 {
+    width: 71px;
+    height: 33px;
+    margin-top: -33px;
+    margin-right: 42px;
+    margin-bottom: 21px;
   }
 }
  .u-footer {
