--- a/index.css
+++ b/index.css
@@ -208,6 +208,7 @@
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
   font-weight: 700;
+  font-size: 3.75rem;
   margin: 79px auto 0 0;
 }
 
@@ -219,7 +220,7 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
-  margin: 73px 0 0;
+  margin: 55px 0 0;
 }
 
 .u-section-2 .u-btn-1 {
@@ -228,14 +229,14 @@
   letter-spacing: 4px;
   background-image: none;
   font-weight: 700;
-  margin: 37px auto 0 0;
+  margin: 40px auto 0 0;
   padding: 18px 52px 18px 51px;
 }
 
 .u-section-2 .u-gallery-1 {
   height: 750px;
-  margin-top: 37px;
-  margin-bottom: 27px;
+  margin-top: 52px;
+  margin-bottom: 40px;
 }
 
 .u-section-2 .u-gallery-inner-1 {
@@ -379,6 +380,7 @@
 
   .u-section-2 .u-text-1 {
     margin-left: 300px;
+    font-size: 3rem;
   }
 
   .u-section-2 .u-text-2 {
@@ -400,31 +402,34 @@
 
 @media (max-width: 575px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 832px;
+    min-height: 944px;
   }
 
   .u-section-2 .u-text-1 {
     margin-top: 25px;
     margin-left: 0;
+    font-size: 2.25rem;
   }
 
   .u-section-2 .u-text-2 {
     font-size: 1.5rem;
     line-height: 1;
     width: auto;
+    letter-spacing: 0px;
     margin-top: 25px;
     margin-left: 0;
   }
 
   .u-section-2 .u-btn-1 {
     font-size: 1.25rem;
-    margin-top: 25px;
+    margin-top: 37px;
     margin-left: auto;
     padding: 18px 10px 18px 9px;
   }
 
   .u-section-2 .u-gallery-1 {
     height: 300px;
+    margin-top: 40px;
     margin-bottom: 37px;
   }
 
